--- a/html/mbti/style.css
+++ b/html/mbti/style.css
@@ -42,7 +42,32 @@ a[target="_self"] {
     background-color: white;
     padding: 5px;
 }
-
+/* 지정된 속성값을 공백으로 분리된 단어로 포함하는 요소 */
+img[alt~="ENTP"]{
+    box-shadow: 6px 6px 12px black;
+}
+/* 지정된 속성값과 일치 or 하이픈('-')으로 시작하는 ex) TYPE- */
+img[alt|="TYPE"]{
+    box-shadow: -5px -5px 10px black;
+}
+/* 지정된 속성값으로 시작하는 요소 */
+a[target^="_b"]{
+    background-color: blue;
+    padding: 10px;
+    margin: 30px;
+    color: white;
+    display: inline-block;
+}
+/* 지정된 속성값으로 끝나는 요소 */
+a[href$="istj"]{
+    background-color: green;
+    color: white;
+}
+/* 지정된 속성값을 포함하는 요소 */
+ul[class*="type"]{
+    text-align: center;
+    padding: 35px 0;
+}
 /*
     1. [속성="값"]  : alt="바다 사진" / [alt="바다 사진"]
     2. [속성~="값"] : alt="바다 사진" / [alt~="바다"]
