--- a/html/css_priority.css
+++ b/html/css_priority.css
@@ -9,27 +9,27 @@ div{
 
 /* 5. 태그이름으로 지정한 속성 */
 
-h1 {
+/* h1 {
     color: blue;
-}
+} */
 
 /*  4. 클래스 이름으로 지정한 속성 */
-.latte{
+/* .latte{
     color: brown;
-}
+} */
 
 /* 3. id로 지정한 속성 */
-#toffee{
+/* #toffee{
     color: yellow;
-}
+} */
 
-#toffee{
+/* #toffee{
     color: purple !important;
-}
+} */
 /* 2. HTML에서 style을 직접 지정한 속성 */
 
 /* 1. 속성값 뒤에 !important를 붙인 속성 */
 
-h1{
+/* h1{
     color : black !important;
-}
+} */
